name: LearnHaskell
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable LearnHaskell
    main-is: P1_Basic.hs
    build-depends:
        base -any
    default-language: Haskell2010
    other-modules:
        P2_List
        P3_List_and_Tuple
        P4_Function

