name: LearningHaskell
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable LearningHaskell
    main-is: HS1_First_Steps.hs
    build-depends:
        Rasterific -any,
        base -any,
        JuicyPixels -any
    default-language: Haskell2010
    other-modules:
        HS5_Higher_order_Functions
        HS3_Recursion
        HS2_Fundamentals
        HS4_Spirals_Snowflakes_Trees_Recursion_in_Pictures
        LineGraphics

