name: LearningHaskell
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable LearningHaskell
    main-is: Ch1.hs
    build-depends:
        Rasterific -any,
        base -any,
        JuicyPixels -any
    default-language: Haskell2010
    other-modules:
        Ch3
        Ch2
        Ch4
        Ch1_Ex
        Ch2_Ex
        Ch3_Ex
        LineGraphics
        Ch5

