name: LearningHaskell
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable LearningHaskell
    main-is: Ch1.hs
    build-depends:
        Rasterific -any,
        base -any,
        JuicyPixels -any
    default-language: Haskell2010
    other-modules:
        Ch4
        Ch3_3
        Ch1_Ex
        Ch5_1
        ShapeGraphics
        LineGraphics
        Ch2_1
        Ch5_2
        Ch2_2
        ShapeExamples
        Ch2_Ex
        Ch3_1
        Ch3_2
        Ch5_Ex
        Ch3_Ex
        Ch4_Ex
        Ch6_1
        Ch6_2
        Ch6_3

